[package]
name = "tt"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
logos = "0.13"
memfd = "0.6"
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serialport = "4"
thiserror = "1"
wayland-client = "0.30"
wayland-protocols-misc = { version = "0.1", features = ["client"] }
